--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404 Page not found - blog for log</title><meta name="Description" content="This is my cool site"><meta property="og:title" content="404 Page not found" />
+        <title>404 Page not found - Blog</title><meta name="Description" content="This is my cool site"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="This is my cool site" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://serialt.github.io/404.html" /><meta property="og:site_name" content="Log" />
@@ -22,7 +22,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="blog for log">记录</a>
+            <a href="/" title="Blog">记录</a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/posts/"> 文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -45,7 +45,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="blog for log">记录</a>
+                <a href="/" title="Blog">记录</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
